# PlaCoR

./: .gitignore  CMakeLists.txt  README.md
cmake/Modules/: FindCereal.cmake  FindLibEvent.cmake  FindLibSSH.cmake  FindSSRCSpread.cmake  FindSpread.cmake
examples/: CMakeLists.txt  basicOperations.cpp  callableModule.cpp  client.cpp  example1.cpp  parallel.cpp  server.cpp  spawn.cpp  test.cpp  vecsum.cpp  vecsum_spawn.cpp
include/cor/: cor.hpp  message.tpp
include/cor/elements/: executor.hpp  executor.tpp  mailbox.hpp  organizer.hpp  pod.hpp  pod.tpp  static_organizer.hpp  synchronizer.hpp  value.hpp  value.tpp
include/cor/resources/: agent.hpp  agent.tpp  communicator.hpp  data.hpp  domain.hpp  group.hpp  mutex.hpp
include/cor/services/: controller.hpp  controller.tpp  mailer.hpp  remote_session.hpp  resource_factory.hpp  resource_factory.tpp  resource_manager.hpp  resource_manager.tpp  resource_ptr.hpp  resource_ptr.tpp
include/cor/system/: macros.hpp
include/cor/utils/: utils.hpp
include/event/: event.hpp
include/libssh/: libssh.hpp
libcor/: CMakeLists.txt
libcor/include/: CMakeLists.txt
libcor/include/cor/: cor.hpp  message.hpp  message.tpp
libcor/include/cor/elements/: container.hpp  container.tpp  dynamic_organizer.hpp  executor.hpp  executor.tpp  mailbox.hpp  pod.hpp  pod.tpp  sbarrier.hpp  smutex.hpp  srwmutex.hpp  static_organizer.hpp  value.hpp  value.tpp
libcor/include/cor/resources/: agent.hpp  agent.tpp  barrier.hpp  closure.hpp  communicator.hpp  data.hpp  data.tpp  domain.hpp  group.hpp  mutex.hpp  proto_agent.hpp  proto_agent.tpp  resource.hpp  rwmutex.hpp
libcor/include/cor/services/: consistency_object.hpp  controller.hpp  controller.tpp  mailer.hpp  page_manager.hpp  resource_manager.hpp  resource_manager.tpp  resource_ptr.hpp  resource_ptr.tpp  rpc_manager.hpp  rpc_manager.tpp
libcor/include/cor/system/: macros.hpp  pod.hpp  pod.tpp  rpc_class.hpp  rpc_class.tpp  rpc_manager.hpp  rpc_manager.tpp  rpc_table.hpp  system.hpp
libcor/include/cor/utils/: utils.hpp
libcor/src/cor/: CMakeLists.txt  cor.cpp  message.cpp
libcor/src/cor/elements/: CMakeLists.txt  container.cpp  dynamic_organizer.cpp  mailbox.cpp  pod.cpp  sbarrier.cpp  smutex.cpp  srwmutex.cpp  static_organizer.cpp
libcor/src/cor/resources/: CMakeLists.txt  barrier.cpp  closure.cpp  communicator.cpp  domain.cpp  group.cpp  mutex.cpp  resource.cpp
libcor/src/cor/services/: CMakeLists.txt  consistency_object.cpp  controller.cpp  mailer.cpp  page_manager.cpp  remote_session.cpp  resource_manager.cpp  rpc_manager.cpp  session_manager.cpp
libcor/src/cor/system/: CMakeLists.txt  pod.cpp  system.cpp
libcor/src/cor/utils/: utils.cpp
modules/: pool.cpp  pool.hpp  timer.hpp
src/cor/: CMakeLists.txt  cor.cpp
src/cor/elements/: CMakeLists.txt  dynamic_organizer.cpp  organizer.cpp  pod.cpp  static_organizer.cpp  synchronizer.cpp
src/cor/resources/: CMakeLists.txt  communicator.cpp  domain.cpp  group.cpp  resource.cpp
src/cor/services/: consistency_object.cpp  controller.cpp  mailer.cpp  remote_session.cpp  resource_manager.cpp
src/cor/utils/: utils.cpp
tests/: CMakeLists.txt  clientRPC.cpp  debug.cpp  dummy.cpp  module1.cpp  module2.cpp  serverRPC.cpp  test.cpp  test_alias.cpp  test_client.cpp  test_comm.cpp  test_pool.cpp  test_root.cpp  test_server.cpp  test_spawn.cpp  vecsum.cpp  vecsum_spawn.cpp
tools/: CMakeLists.txt
tools/cor/: CMakeLists.txt  cor.cpp
tools/corun/: CMakeLists.txt  corun.cpp  host_file_parser.cpp  remote_session.cpp  remote_session.hpp  session_manager.cpp  session_manager.hpp
tools/corun/libssh/: libssh.hpp
tools/corx/: CMakeLists.txt  corx.cpp
units/: CMakeLists.txt
